# comma

./: ,  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  comma.nix  default.nix  flake.nix  install-symlinks  release.sh  update-index.nix
.github/workflows/: ci.yml
contrib/zsh/: _comma
etc/: comma-command-not-found.fish  comma-command-not-found.nu  comma-command-not-found.sh  command-not-found.fish
pkgs/comma/: default.nix
src/: cache.rs  comma-command-not-found.fish  command-not-found.sh  index.rs  main.rs  shell.rs
