[package]
name = "comma"
description = "runs programs without installing them"
version = "1.8.0"
edition = "2021"
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive", "cargo", "env"] }
xdg = "2.5.0"
bitcode = "0.6.3"
