[package]
name = "comma"
description = "runs programs without installing them"
version = "2.3.2"
edition = "2021"
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive", "cargo", "env"] }
xdg = "2.5.2"
bitcode = "0.6.6"
log = "0.4.27"
env_logger = "0.11.8"
clap_mangen = "0.2.28"
